--- a/index.html
+++ b/index.html
@@ -5,14 +5,24 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,600" rel="stylesheet" type="text/css">
         <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
-        <link type="text/css" rel="stylesheet" href="style.css">
+        <link type="text/css" rel="stylesheet" href="styles/style.css">
         <title>Checkers</title>
+        <link rel="icon" href="images/favicon.png" type="image/x-icon">
     </head>
     
     <body>
-        <div class="table clearfix"></div>
+        <div id="gameInterface">
+            <div class="table clearfix"></div>
+            <div class="menu">
+                <h1 class="player-name" id="player-black">Player 1</h1>
+                <h1 class="player-name" id="player-white">Player 2</h1>
 
-        <script src="logic.js"></script>
-        <script src="start.js"></script>
+                <button class="btn-newgame" onclick="restartGame();">
+                    <i class="ion-ios-plus-outline"></i>New Game
+                </button>
+            </div>
+        </div>
+        <script src="scripts/logic.js"></script>
+        <script src="scripts/start.js"></script>
     </body>
 </html>
