--- a/index.html
+++ b/index.html
@@ -14,13 +14,17 @@
         <div id="gameInterface">
             <div class="table clearfix"></div>
             <div class="menu">
+
+                <h2 class="player-score" id="score-white">0</h2>
                 <h1 class="player-name" id="player-black">Player 1</h1>
                 <h1 class="player-name" id="player-white">Player 2</h1>
+                <h2 class="player-score" id="score-black">0</h2>
 
                 <button class="btn-newgame" onclick="restartGame();">
                     <i class="ion-ios-plus-outline"></i>New Game
                 </button>
             </div>
+            
         </div>
         <script src="scripts/logic.js"></script>
         <script src="scripts/start.js"></script>
